infrastructure/gatus/k8s-sidecar.patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  template:
    spec:
      containers:
        - image: ghcr.io/kiwigrid/k8s-sidecar:2.5.5@sha256:8009f14fb715e1d2a4b732b9e43888d34219f813af302cd7a300d85585667fc4
          name: config-sync
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: tmp
              mountPath: /tmp
