infrastructure/gatus/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: service-account
      volumes:
        - name: config-map
          configMap:
            name: config
        - name: volume
          persistentVolumeClaim:
            claimName: app-volume
      containers:
        - name: app
          image: ghcr.io/twin/gatus:v5.34.0@sha256:3fff895e77d35ee62e898860f4613755bc2344127d93e3f326429d40270e2115
          envFrom: []
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: config-map
              mountPath: /config/config.yaml
              subPath: gatus.yml
          resources:
            requests:
              memory: 128M
            limits:
              memory: 256M
          ports:
            - name: http
              containerPort: 8080
        - image: ghcr.io/kiwigrid/k8s-sidecar:2.5.5@sha256:8009f14fb715e1d2a4b732b9e43888d34219f813af302cd7a300d85585667fc4
          name: config-sync
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: tmp
              mountPath: /tmp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:k8s:monitoring
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [gatus]
