infrastructure/gatus/gatus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      serviceAccountName: service-account
      containers:
        - image: ghcr.io/twin/gatus:v5.34.0@sha256:3fff895e77d35ee62e898860f4613755bc2344127d93e3f326429d40270e2115
          name: gatus
          resources:
            requests:
              memory: 100M
            limits:
              memory: 500M
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-map
              mountPath: /config/gatus.yml
              subPath: gatus.yml
              readOnly: true
        - image: ghcr.io/kiwigrid/k8s-sidecar:2.5.0@sha256:a6b3f707f883108376514489a94d6629109a327b2978e1d826cd104c4ca436df
          name: config-sync
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config-map
          configMap:
            name: config
        - name: config
          emptyDir: {}
        - name: tmp
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host gatus.beaver-cloud.xyz]
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
